# aequilibrae

./: .codecov.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE.TXT  MANIFEST.in  Pipfile  README.md  README.rst  README.txt  __version__.py  azure-pipelines.yml  ci.sh  conda_forge_recipe.yaml  conftest.py  duckDB copy.py  duckDB.py  generate_docs.bat  geo.geojson  geopackage_con.gpkg  geopackage_pla.gpkg  geopackage_seg.gpkg  geopackage_seg_where.gpkg  geopackage_segment.geojson  geopackage_segment.gpkg  publish_on_windows.bat  pyproject.toml  requirements.txt  requirements_additional.txt  setup.cfg  setup.py  sioux_falls_odme_links_data.csv  test_requirements.txt  tran.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  build_artifacts_qgis.yml  build_linux.yml  debug_tests.yml  qgis_requirements.py  qgis_version.py  tests_linux.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_artifacts_qgis.yml  build_linux.yml  build_mac.yml  build_wheels.yml  build_windows.yml  build_windows32.yml  compile_windows_binaries.yml  debug_tests.yml  dispatch_event.yml  documentation.yml  documentationDev.yml  linting.yml  newtests.yml  pythonpackage.yml  pythonpublish.yml  test_build_linux.yml  test_build_mac.yml  test_build_windows.yml  test_build_windows32.yml  test_coverage.yml  test_linux_with_coverage.yml  test_qaequilibrae.yml  test_windows.yml  tests.yml  tests35.yml  tests36.yml  tests37.yml  tests38.yml  testsdocker.yml  unit_tests.yml  upload_tar.yml
aequilibrae/: __init__.py  __version__.py  aequilibrae_project.py  context.py  log.py  parameter_default.yml  parameters.py  parameters.yml  reserved_fields.py  sl_benchmark.py  starts_logging.py
aequilibrae/distribution/: __init__.py  gravity_application.py  gravity_calibration.py  ipf.py  ipf_core.pyx  setup_ipf.py  synthetic_gravity_model.py
aequilibrae/distribution/cython/: ipf_core.pyx
aequilibrae/log/: __init__.py  log.py
aequilibrae/matrix/: __init__.py  aequilibrae_data.py  aequilibrae_matrix.py  coo_demand.pxd  coo_demand.pyx  sparse_matrix.pxd  sparse_matrix.pyx
aequilibrae/matrix/cython/: sparse_matrix.pyx
aequilibrae/paths/: AoN.pyx  Build_extensions.bat  ParquetWriter.cpp  ParquetWriter.h  ParquetWriter.pxd  TrafficAssignment.cpp  TrafficAssignment.h  TrafficAssignmentCy.pyx  _ParquetWriter._pxd_  __init__.py  __version__.py  all_or_nothing.py  assignment_class.py  assignment_paths.py  basic_path_finding.pyx  bfs_le.pxd  bfs_le.pyx  bfw.py  bpr.pyx  bpr2.pyx  cfw.py  conical.pyx  connectivity_analysis.py  connectivity_tester.py  equilibrium_directions.pyx  fw.py  graph.py  graph_building.pyx  hyperpath.pyx  inrets.pyx  linear_approximation.py  link.py  msa.py  multi_threaded_aon.py  multi_threaded_paths.py  multi_threaded_skimming.py  network_skimming.py  odme.py  odme_algorithm.py  optimal_strategies.py  (+26 more)
aequilibrae/paths/cython/: AoN.pyx  basic_path_finding.pyx  bpr.pyx  bpr2.pyx  conical.pyx  connectivity.pyx  (+11 more)
aequilibrae/project/: __init__.py  about.py  aequilibrae_project.py  basic_table.py  data_loader.py  database_connection.py  field_editor.py  meta_fields.py  project.py  project_cleaning.py  project_creation.py  project_design.xml  spatialite_connection.py  table_loader.py  zone.py  zoning.py
aequilibrae/reference_files/: __init__.py
aequilibrae/transit/: SF_graph_builder.py  __init__.py  column_order.py  constants.py  date_tools.py  gtfs_loader.py  lib_gtfs.py  map_matching_graph.py  parse_csv.py  route_system.py  transit.py  transit_.py  transit_graph_builder.py
aequilibrae/utils/: __init__.py  core_setter.py  create_delaunay_network.py  create_example.py  db_utils.py  geo_index.py  geo_utils.py  get_table.py  list_tables_in_db.py  python_signal.py  qgis_utils.py  select_link_benchmark.py  signal.py  spatialite_utils.py  worker_thread.py
airlie_model/: parameters.yml
benchmarks/: select_link_benchmark.py
building/: build_aequilibrae_locally.cmd  build_docker.cmd
building/linux3.5/: dockerfile
building/linux3.6/: dockerfile
building/linux3.7/: dockerfile
docs/: Makefile  conf.py  create_docs_data.py  make.bat  requirements-docs.txt  table_documentation.py
docs/examples/: README.RST  editing_network.py  forecasting.py  logging_to_terminal.py  path_and_skimming.py  plot_display.py  plot_forecasting.ipynb  plot_from_osm.py  plot_logging_to_terminal.py  plot_moving_link_extremity.py  plot_moving_nodes.py
docs/source/: SiouxFalls.ipynb  aequilibrae.rst  aequilibrae.transit.gtfs.rst  api.rst  apidoc.rst  conf.py  datamodel.rst.template  developing.rst  exporting_to_gmns.rst  getting_started.rst  gettingstarted.rst  history.rst  importing_from_gmns.rst  importing_from_osm.rst  index.rst  installation.rst  ipf_performance.rst  main_classes.rst  modeling.rst  modeling_with_aequilibrae.rst  modelling_with_aequilibrae.rst  modules.rst  network.rst  nitty_gritty.rst  overview.rst  paragrah_marker_hierarchy.txt  parameter_file.rst  path_computation_engine.rst  project.rst  project_structure.drawio  project_tables.rst  python.rst  qgis.rst  roadmap.rst  sg_execution_times.rst  softwaredevelopment.rst  support.rst  traffic_assignment.rst  usageexamples.rst  user_guide.rst  (+3 more)
docs/website/: check_documentation_versions.py  index.html  redir.py
jupyter_development/: compare_path_based.ipynb  integrate_path_based_in_aequ.ipynb  integrate_shortest_path.ipynb  parsing_networks.ipynb  path_based_integration.ipynb  path_based_parallel.ipynb  remove_duplicate_nodes.ipynb  utils.py
tests/: clean_after_tests.py  compile.py  models_for_test.py  requirements_tests.txt  setup_windows_spatialite.py  test_hyperpath.py
tests/aequilibrae/: __init__.py  conftest.py
tests/data/: Final_Network.dbf  Final_Network.qml  Final_Network.shp  Final_Network.shx  SiouxFalls.7z  __init__.py  all_nodes.dbf  all_nodes.qml  all_nodes.shp  all_nodes.shx  formatting.qgs  link_loads.aed  no_index.omx  reference_files.py  test_graph.aeg  test_matrix.aem  test_omx.omx
(+668 files in other folders)
